Use Java 17 relay thread startup
Co-authored-by: chasparos <129048053+chasparos@users.noreply.github.com>